--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                     <div class="about__information-data">
                         <i class="fa fa-envelope  about__information-icon"></i>
-                        <span>oneal.wills@gmail.com</span>
+                        <span><a href="mailto:oneal.wills@gmail.com">oneal.wills@gmail.com</a></span>
                     </div>
                 </div>
 
